<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity_faculty"
        android:visibility="visible"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:id="@+id/FacultyLayout"
        android:background="@drawable/walpaper">
    <RelativeLayout
            android:layout_width="match_parent"
            android:paddingBottom="16dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:id="@+id/textFaculty"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:typeface="normal"
                android:textSize="30sp"
                android:lineSpacingExtra="24sp"
                android:textColor="@android:color/holo_orange_dark"
                android:textAllCaps="true"
                android:layout_marginTop="0dp"
                android:visibility="visible"
                android:text="@string/facultyText"
                android:textStyle="bold"
                tools:fontFamily="@font/amiri_italic"
                app:fontFamily="@font/amiri_italic"/>

        <Button
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/selectphoto_button_register"
                android:layout_marginTop="0dp"
                android:layout_below="@+id/textFaculty"
                android:visibility="visible"
                android:background="@drawable/round_photo"
                android:layout_centerHorizontal="true"
                android:hint="Select Photo"/>
        <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="0dp"
                android:id="@+id/select_imageview"
                app:civ_border_width="2dp"
                android:layout_below="@+id/textFaculty"
                android:layout_centerHorizontal="true"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPersonName|textCapWords"
                android:ems="10"
                android:id="@+id/editFname"
                android:hint="@string/fname"
                android:textSize="18sp"
                android:layout_below="@+id/selectphoto_button_register"
                android:lineSpacingExtra="8sp"
                android:textColor="@android:color/black"
                android:visibility="visible"
                android:autofillHints=""
                tools:targetApi="o"
                android:layout_marginTop="0dp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:layout_below="@+id/editFname"
                android:id="@+id/editFemail"
                android:autofillHints=""
                android:typeface="normal"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:lineSpacingExtra="8sp"
                android:textColor="@android:color/black"
                android:textColorLink="@android:color/holo_green_light"
                android:visibility="visible"
                tools:targetApi="o"
                android:hint="@string/emailFId"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="phone"
                android:ems="10"
                android:layout_below="@+id/editFemail"
                android:layout_marginTop="5dp"
                android:id="@+id/editFphone"
                android:hint="@string/contactFno"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:typeface="normal"
                android:textSize="18sp"
                android:lineSpacingExtra="8sp"
                android:textColor="@android:color/black"
                android:textColorLink="@android:color/holo_green_light"
                android:visibility="visible"
                android:autofillHints=""
                tools:targetApi="o"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="number"
                android:ems="10"
                android:layout_below="@+id/editFphone"
                android:layout_marginTop="5dp"
                android:id="@+id/editFcollegeid"
                android:textColorLink="@android:color/holo_green_light"
                android:hint="@string/collegeFid"
                android:typeface="normal"
                android:textSize="18sp"
                android:lineSpacingExtra="8sp"
                android:textColor="@android:color/black"
                android:visibility="visible"
                android:autofillHints=""
                tools:targetApi="o"/>

        <Spinner
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/spinner1"
                android:visibility="visible"
                android:layout_below="@id/editFcollegeid"
                android:layout_marginTop="5dp"
                android:spinnerMode="dropdown"/>

        <Button
                android:text="@string/fnext"
                android:layout_below="@+id/spinner1"
                android:id="@+id/buttonFnext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:textAllCaps="true"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="@android:color/holo_orange_dark"
                android:textSize="18sp"
                android:gravity="center"
                android:lineSpacingExtra="8sp"
                android:textStyle="bold"
                android:visibility="visible"/>

    </RelativeLayout>
</ScrollView>