<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity_student"
        android:visibility="visible"
        android:id="@+id/StudentLayout"
        android:background="@drawable/walpaper">
    <RelativeLayout
            android:layout_width="match_parent"
            android:paddingBottom="16dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:id="@+id/textStudent"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:fontFamily="@font/amiri_italic"
                android:typeface="normal"
                android:textSize="30sp"
                android:lineSpacingExtra="24sp"
                android:textColor="@android:color/holo_orange_dark"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:visibility="visible"/>

        <Button
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/selectphoto_button_register"
                android:layout_marginTop="0dp"
                android:layout_below="@+id/textStudent"
                android:visibility="visible"
                android:gravity="center"
                android:background="@drawable/round_photo"
                android:layout_centerHorizontal="true"
                android:hint="Select Photo"/>
        <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:gravity="center"
                android:layout_marginTop="0dp"
                android:id="@+id/select_imageview"
                app:civ_border_width="2dp"
                android:layout_below="@+id/textStudent"
                android:layout_centerHorizontal="true"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPersonName|textCapWords"
                android:ems="10"
                android:id="@+id/editSname"
                android:hint="@string/sname"
                android:textSize="18sp"
                android:layout_below="@+id/selectphoto_button_register"
                android:lineSpacingExtra="8sp"
                android:textColor="@android:color/black"
                android:visibility="visible"
                android:autofillHints=""
                tools:targetApi="o"
                android:layout_marginTop="0dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:layout_below="@+id/editSname"
                android:id="@+id/editSemail"
                android:autofillHints=""
                android:typeface="normal"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:lineSpacingExtra="8sp"
                android:textColor="@android:color/black"
                android:textColorLink="@android:color/holo_green_light"
                android:visibility="visible"
                tools:targetApi="o"
                android:hint="@string/emailSid"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="phone"
                android:ems="10"
                android:layout_below="@+id/editSemail"
                android:layout_marginTop="5dp"
                android:id="@+id/editSphone"
                android:hint="@string/contactSno"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:typeface="normal"
                android:textSize="18sp"
                android:lineSpacingExtra="8sp"
                android:textColor="@android:color/black"
                android:textColorLink="@android:color/holo_green_light"
                android:visibility="visible"
                android:autofillHints=""
                tools:targetApi="o"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="number"
                android:ems="10"
                android:layout_below="@+id/editSphone"
                android:layout_marginTop="5dp"
                android:id="@+id/editScollegeid"
                android:textColorLink="@android:color/holo_green_light"
                android:hint="@string/collegeSid"
                android:typeface="normal"
                android:textSize="18sp"
                android:lineSpacingExtra="8sp"
                android:textColor="@android:color/black"
                android:visibility="visible"
                android:autofillHints=""
                tools:targetApi="o"/>
        <Spinner
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:id="@+id/spinner1"
                android:dropDownWidth="match_parent"
                android:layout_below="@+id/editScollegeid"
                android:visibility="visible"
                android:spinnerMode="dropdown"/>
        <Spinner
                android:layout_width="193dp"
                android:layout_height="50dp"
                android:id="@+id/spinner2"
                android:layout_below="@+id/editScollegeid"
                android:visibility="visible"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="0dp"
                android:layout_marginEnd="0dp"
                android:spinnerMode="dropdown"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/spinner3"
                android:layout_marginStart="0dp"
                android:visibility="visible"
                android:layout_below="@+id/spinner1"
                android:spinnerMode="dropdown"
                android:layout_marginLeft="0dp"/>
        <Button
                android:text="@string/snext"
                android:id="@+id/buttonSnext"
                android:layout_below="@+id/spinner3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:textAllCaps="true"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="@android:color/holo_orange_dark"
                android:textSize="18sp"
                android:gravity="center"
                android:lineSpacingExtra="8sp"
                android:textStyle="bold"
                android:visibility="visible"/>
    </RelativeLayout>

</ScrollView>