<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteY="81dp"
        android:visibility="visible"
        android:id="@+id/WelcomeLayout"
        android:background="@drawable/walpaper">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomestart"
            android:textSize="28sp"
            android:textColor="@android:color/holo_orange_dark"
            android:id="@+id/textWelcome"
            android:layout_marginEnd="0dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:fontFamily="@font/arbutus_slab"
            android:textStyle="bold|italic"
            android:layout_below="@+id/buttonStudent"
            android:visibility="visible"
            tools:fontFamily="@font/aclonica"
            android:textColorLink="@android:color/holo_green_light"
            android:layout_marginTop="-251dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>
    <Button
            android:text="@string/facultybutton"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="84dp"
            android:id="@+id/buttonFaculty"
            android:layout_marginRight="84dp"
            android:background="@drawable/custombutton"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            android:textAllCaps="true"
            android:typeface="serif"
            android:textColor="#FFFFFF"
            android:layout_marginTop="234dp"
            android:layout_alignParentTop="true"
            android:visibility="visible"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_alignParentLeft="true"/>
    <Button
            android:text="@string/studentbutton"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonStudent"
            android:visibility="visible"
            android:background="@drawable/custombutton"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/buttonFaculty"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="87dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="87dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.519"
            app:layout_constraintVertical_bias="0.0"
            android:typeface="serif"
            android:textSize="24sp"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="292dp"
            android:layout_alignParentTop="true"
            android:textStyle="bold|italic"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>

</RelativeLayout>