<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity_authentication"
        android:visibility="visible"
        android:id="@+id/AuthenticationLayout"
        android:background="@drawable/walpaper">

    <TextView
            android:text="@string/welcomeToChatfeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:id="@+id/textWelcome"
            android:layout_marginTop="49dp"
            app:fontFamily="sans-serif-condensed"
            android:typeface="normal"
            android:textSize="30sp"
            android:lineSpacingExtra="8sp"
            android:textStyle="bold|italic"
            android:textColor="@android:color/background_dark"
            android:visibility="visible"
    />
    <TextView
            android:text="@string/viewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:id="@+id/textViewEmailAuth"
            android:layout_marginTop="143dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="24sp"
            android:lineSpacingExtra="4sp"
            android:textStyle="italic"
            android:visibility="visible"
            android:textAlignment="center"
            android:clickable="false"
            android:singleLine="false"
            android:textColorLink="@android:color/holo_green_light"
            app:fontFamily="sans-serif-thin"
            android:textColor="@android:color/background_dark"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="118dp"
            android:layout_marginStart="118dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="96dp"
            android:layout_marginEnd="96dp"
            android:layout_centerInParent="true"/>
    <EditText
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:ems="6"
            android:maxLength="6"
            android:id="@+id/editPass"
            android:textColorLink="@android:color/holo_green_light"
            android:visibility="visible"
            android:typeface="normal"
            android:textSize="36sp"
            android:textColor="@android:color/black"
            android:autofillHints=""
            tools:targetApi="o"
            android:layout_marginTop="313dp"
            android:layout_alignParentTop="true"
            android:maxEms="6"
            android:minEms="6"
            android:inputType="numberPassword"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="128dp"
            android:layout_marginStart="128dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="131dp"
            android:layout_marginEnd="131dp"
            android:hint="######"/>
    <Button
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/buttonDone"
            android:layout_marginBottom="17dp"
            android:layout_alignEnd="@+id/editPass"
            android:layout_marginEnd="4dp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:background="@android:color/holo_orange_dark"
            android:textSize="18sp"
            android:textColor="@android:color/background_light"
            android:visibility="visible"
            android:layout_alignRight="@+id/editPass"
            android:layout_marginRight="4dp"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="145dp"
            android:layout_marginStart="145dp"
            android:layout_alignParentLeft="true"/>
</RelativeLayout>